# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  code-env  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: python-ci.yml
labels/: tests.py  views.py
labels/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  views.py
task_manager/statuses/: apps.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  views.py
task_manager/templates/: base.html  index.html
task_manager/templates/auth/: login.html
task_manager/templates/labels/: create.html  delete.html  index.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: _form_field.html  create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  list.html  update.html
task_manager/users/: apps.py  auth_urls.py  forms.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
templates/: base.html
templates/auth/: login.html
templates/labels/: create.html  delete.html  update.html
templates/statuses/: delete.html  list.html  update.html
templates/tasks/: create.html  detail.html  list.html
templates/users/: delete.html
users/: tests.py  views.py
