[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.12.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "django-bootstrap5>=25.3",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.13",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[tool.ruff]
exclude = [
    "task_manager/migrations",
    "task_manager/settings.py",
]

[tool.setuptools]
packages = [
  "task_manager",
  "users",
  "statuses",
  "labels",
  "tasks",
]

[tool.uv]
compile-bytecode = false