[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-bootstrap5>=25.2",
    "django-filter>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.37.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "rollbar>=1.3.0",
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 79
extend-exclude = ["venv", ".venv", "migrations", "task_manager/settings.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
